Test pinned case too